Actually fixed the whitespace now

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -11,6 +11,8 @@
 }
 
 .sidebar {  
+	white-space: nowrap;
+  overflow: hidden;
   position: fixed;
   z-index: 3;
   top: 0;
@@ -19,7 +21,6 @@
   right: 0;
   bottom: 0;
   height: 100%;
-  overflow-x: hidden;
   background: rgba(255, 255, 255, 1.0);
   box-shadow: 10px 0 5px -2px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 10px 0 5px -2px rgba(0, 0, 0, 0.5);
